--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^0.14.7",
-    "react-native": "^0.22.0"
+    "react-native": "^0.22.0",
+    "react-native-page-control": "^1.0.6"
   }
 }
